responsive really taking shape, few more sections to complete

--- a/index.html
+++ b/index.html
@@ -72,9 +72,41 @@
     <!-- stack icons -->
     <div class="stack-icons">
         <div class="container-fluid">
-            <div class="row">
-                <h3>{ These are a few of my favorite things }</h3>
-                <img class="img-responsive" src="images/stackIcons.svg" />
+            <h3>{ These are a few of my favorite things }</h3>
+            <div class="row row-centered" id="stackRow">
+                <div class="col-lg-1 col-sm-2 col-xs-3 portfolio-item">
+                    <img class="img-responsive" src="images/stackicons/csharp.png" alt="">
+                </div>
+                <div class="col-lg-1 col-sm-2 col-xs-3 portfolio-item">
+                    <img class="img-responsive" src="images/stackicons/css3.png" alt="">
+                </div>
+                <div class="col-lg-1 col-sm-2 col-xs-3 portfolio-item">
+                    <img class="img-responsive" src="images/stackicons/bootstrap.png" alt="">
+                </div>
+                <div class="col-lg-1 col-sm-2 col-xs-3 portfolio-item">
+                    <img class="img-responsive" src="images/stackicons/javascript.png" alt="">
+                </div>
+                <div class="col-lg-1 col-sm-2 col-xs-3 portfolio-item">
+                    <img class="img-responsive" src="images/stackicons/sublime_text_logo.png" alt="">
+                </div>
+                <div class="col-lg-1 col-sm-2 col-xs-3 portfolio-item">
+                    <img class="img-responsive" src="images/stackicons/html5.png" alt="">
+                </div>
+                <div class="col-lg-1 col-sm-2 col-xs-3 portfolio-item">
+                    <img class="img-responsive" src="images/stackicons/angularJS.png" alt="">
+                </div>
+                <div class="col-lg-1 col-sm-2 col-xs-3 portfolio-item">
+                    <img class="img-responsive" src="images/stackicons/net-visual-studio.png" alt="">
+                </div>
+                <div class="col-lg-1 col-sm-2 col-xs-3 portfolio-item">
+                    <img class="img-responsive" src="images/stackicons/nodejs.png" alt="">
+                </div>
+                <div class="col-lg-1 col-sm-2 col-xs-3 portfolio-item" id="jquery">
+                    <img class="img-responsive" src="images/stackicons/jquery.png" alt="">
+                </div>
+                <div class="col-lg-1 col-sm-2 col-xs-3 portfolio-item" id="octocat">
+                    <img class="img-responsive" src="images/stackicons/git_octocat.png" alt="">
+                </div>
             </div>
         </div> <!-- container-fluid -->
     </div>
@@ -128,10 +160,10 @@
                         <div class="row">
                             <div class="col-xs-18 col-sm-6 col-md-3">
                                 <div class="thumbnail">
-                                    <img src="images/rsz_1pawze2.png"/>
+                                    <img src="images/rsz_1pawze2.png" />
                                     <div class="caption">
                                         <h4>PAWZE</h4>
-                                        <p>Full stack application. Pawze makes use of SOLID design pattern / SQL database / Web API / REST APIs / OAuth with roles / User dashboard / AngularJS & JQuery with animations / Stripe subscription & payment API / MP4 video background.</p>     
+                                        <p>Full stack application. Pawze makes use of SOLID design pattern / SQL database / Web API / REST APIs / OAuth with roles / User dashboard / AngularJS & JQuery with animations / Stripe subscription & payment API / MP4 video background.</p>
                                     </div>
                                 </div>
                             </div>
@@ -140,7 +172,7 @@
                                     <img src="images/rsz_property-manager.png" alt="">
                                     <div class="caption">
                                         <h4>PROPERTY MANAGER</h4>
-                                        <p>Full stack application. Property Manager features SQL database with search and filtering / Web API / REST APIs / AngularJS / OAuth with roles for login & registration and user dashboard / Users can set favorite properties and drill down into greater detail.<br /></p>                                      
+                                        <p>Full stack application. Property Manager features SQL database with search and filtering / Web API / REST APIs / AngularJS / OAuth with roles for login & registration and user dashboard / Users can set favorite properties and drill down into greater detail.<br /></p>
                                     </div>
                                 </div>
                             </div>
@@ -164,9 +196,9 @@
                             </div>
                         </div><!-- End row -->
                     </div><!-- End container -->
-                    </div>
                 </div>
             </div>
+        </div>
     </section>
     <!--ARTWORK-->
     <section id="slide-4" class="homeSlide">
@@ -202,7 +234,7 @@
                         </div>
                         <div class="col-md-3 col-sm-6 col-xs-12 portfolio-item">
                             <a href="#">
-                                <img class="img-responsive"src="http://placehold.it/750x750/000000/ffffff" alt="">
+                                <img class="img-responsive" src="http://placehold.it/750x750/000000/ffffff" alt="">
                             </a>
                         </div>
                     </div>
