cleaning up About section

--- a/index.html
+++ b/index.html
@@ -72,39 +72,39 @@
     <!-- stack icons -->
     <div class="stack-icons">
         <div class="container-fluid">
-            <h3>{ These are a few of my favorite things }</h3>
+            <h3 id="favtext">{ These are a few of my favorite things }</h3>
             <div class="row row-centered" id="stackRow">
-                <div class="col-lg-1 col-sm-2 col-xs-3 portfolio-item">
+                <div class="col-lg-1 col-sm-2 col-xs-2 portfolio-item">
                     <img class="img-responsive" src="images/stackicons/csharp.png" alt="">
                 </div>
-                <div class="col-lg-1 col-sm-2 col-xs-3 portfolio-item">
+                <div class="col-lg-1 col-sm-2 col-xs-2 portfolio-item">
                     <img class="img-responsive" src="images/stackicons/css3.png" alt="">
                 </div>
-                <div class="col-lg-1 col-sm-2 col-xs-3 portfolio-item">
+                <div class="col-lg-1 col-sm-2 col-xs-2 portfolio-item">
                     <img class="img-responsive" src="images/stackicons/bootstrap.png" alt="">
                 </div>
-                <div class="col-lg-1 col-sm-2 col-xs-3 portfolio-item">
+                <div class="col-lg-1 col-sm-2 col-xs-2 portfolio-item">
                     <img class="img-responsive" src="images/stackicons/javascript.png" alt="">
                 </div>
-                <div class="col-lg-1 col-sm-2 col-xs-3 portfolio-item">
+                <div class="col-lg-1 col-sm-2 col-xs-2 portfolio-item">
                     <img class="img-responsive" src="images/stackicons/sublime_text_logo.png" alt="">
                 </div>
-                <div class="col-lg-1 col-sm-2 col-xs-3 portfolio-item">
+                <div class="col-lg-1 col-sm-2 col-xs-2 portfolio-item">
                     <img class="img-responsive" src="images/stackicons/html5.png" alt="">
                 </div>
-                <div class="col-lg-1 col-sm-2 col-xs-3 portfolio-item">
+                <div class="col-lg-1 col-sm-2 col-xs-2 portfolio-item">
                     <img class="img-responsive" src="images/stackicons/angularJS.png" alt="">
                 </div>
-                <div class="col-lg-1 col-sm-2 col-xs-3 portfolio-item">
+                <div class="col-lg-1 col-sm-2 col-xs-2 portfolio-item">
                     <img class="img-responsive" src="images/stackicons/net-visual-studio.png" alt="">
                 </div>
-                <div class="col-lg-1 col-sm-2 col-xs-3 portfolio-item">
+                <div class="col-lg-1 col-sm-2 col-xs-2 portfolio-item">
                     <img class="img-responsive" src="images/stackicons/nodejs.png" alt="">
                 </div>
-                <div class="col-lg-1 col-sm-2 col-xs-3 portfolio-item" id="jquery">
+                <div class="col-lg-1 col-sm-2 col-xs-2 portfolio-item" id="jquery">
                     <img class="img-responsive" src="images/stackicons/jquery.png" alt="">
                 </div>
-                <div class="col-lg-1 col-sm-2 col-xs-3 portfolio-item" id="octocat">
+                <div class="col-lg-1 col-sm-2 col-xs-2 portfolio-item" id="octocat">
                     <img class="img-responsive" src="images/stackicons/git_octocat.png" alt="">
                 </div>
             </div>
@@ -122,21 +122,23 @@
                      data-center-top="opacity: 1"
                      data--100-bottom="opacity: 1;"
                      data-anchor-target="#slide-2">
-                    <h2>A little about myself</h2>
-                    <p>
-                        Retro readymade four loko mumblecore, put a bird on it health goth disrupt<br>
-                        affogato polaroid kale chips. Pop-up XOXO hella banh mi. Gluten-free semiotics<br>
-                        wayfarers 8-bit, scenester post-ironic ethical man bun taxidermy. Seitan portland<br>
-                        jean shorts pork belly sustainable pitchfork. Venmo marfa shoreditch kogi green<br>
-                        juice schlitz kitsch, meggings try-hard williamsburg jean shorts food truck portland<br>
-                        3 wolf moon seitan. Hammock irony freegan shoreditch, swag trust fund chia vice vegan<br>
-                        fingerstache. Aesthetic neutra humblebrag, gentrify bitters franzen sustainable<br>
-                        messenger bag leggings asymmetrical deep v gastropub raw denim normcore biodiesel.
-                    </p>
-                    <p>
-                        I'm also currently available for freelance work, if you have a website or project in mind<br>
-                        feel free to shoot me a message and we can discuss the particulars.
-                    </p>
+                    <div class="container-fluid" id="aboutText">
+                        <h2>A little about myself</h2>
+                        <p>
+                            Retro readymade four loko mumblecore, put a bird on it health goth disrupt<br>
+                            affogato polaroid kale chips. Pop-up XOXO hella banh mi. Gluten-free semiotics<br>
+                            wayfarers 8-bit, scenester post-ironic ethical man bun taxidermy. Seitan portland<br>
+                            jean shorts pork belly sustainable pitchfork. Venmo marfa shoreditch kogi green<br>
+                            juice schlitz kitsch, meggings try-hard williamsburg jean shorts food truck portland<br>
+                            3 wolf moon seitan. Hammock irony freegan shoreditch, swag trust fund chia vice vegan<br>
+                            fingerstache. Aesthetic neutra humblebrag, gentrify bitters franzen sustainable<br>
+                            messenger bag leggings asymmetrical deep v gastropub raw denim normcore biodiesel.
+                        </p>
+                        <p>
+                            I'm also currently available for freelance work, if you have a website or project in mind<br>
+                            feel free to shoot me a message and we can discuss the particulars.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
