--- a/index.html
+++ b/index.html
@@ -125,17 +125,17 @@
                     <div class="container-fluid" id="aboutText">
                         <h2>A little about myself</h2>
                         <p>
-                            Retro readymade four loko mumblecore, put a bird on it health goth disrupt<br>
-                            affogato polaroid kale chips. Pop-up XOXO hella banh mi. Gluten-free semiotics<br>
-                            wayfarers 8-bit, scenester post-ironic ethical man bun taxidermy. Seitan portland<br>
-                            jean shorts pork belly sustainable pitchfork. Venmo marfa shoreditch kogi green<br>
-                            juice schlitz kitsch, meggings try-hard williamsburg jean shorts food truck portland<br>
-                            3 wolf moon seitan. Hammock irony freegan shoreditch, swag trust fund chia vice vegan<br>
-                            fingerstache. Aesthetic neutra humblebrag, gentrify bitters franzen sustainable<br>
+                            Retro readymade four loko mumblecore, put a bird on it health goth disrupt
+                            affogato polaroid kale chips. Pop-up XOXO hella banh mi. Gluten-free semiotics
+                            wayfarers 8-bit, scenester post-ironic ethical man bun taxidermy. Seitan portland
+                            jean shorts pork belly sustainable pitchfork. Venmo marfa shoreditch kogi green
+                            juice schlitz kitsch, meggings try-hard williamsburg jean shorts food truck portland
+                            3 wolf moon seitan. Hammock irony freegan shoreditch, swag trust fund chia vice vegan
+                            fingerstache. Aesthetic neutra humblebrag, gentrify bitters franzen sustainable
                             messenger bag leggings asymmetrical deep v gastropub raw denim normcore biodiesel.
                         </p>
                         <p>
-                            I'm also currently available for freelance work, if you have a website or project in mind<br>
+                            I'm also currently available for freelance work, if you have a website or project in mind
                             feel free to shoot me a message and we can discuss the particulars.
                         </p>
                     </div>
