--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href='https://fonts.googleapis.com/css?family=Abril+Fatface' rel='stylesheet' type='text/css'>
     <link href="bower_components/font-awesome/css/font-awesome.css" rel="stylesheet" />
     <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+    <link href="css/small.css" media="only screen and (min-width: 300px)" rel="stylesheet" />
     <link href="css/medium.css" media="only screen and (min-width: 600px)" rel="stylesheet" />
     <link href="css/large.css" media="only screen and (min-width: 768px)" rel="stylesheet" />
     <link href="css/style.css" media="only screen and (min-width: 1200px)" rel="stylesheet" />
