--- a/index.html
+++ b/index.html
@@ -120,10 +120,11 @@
              data-anchor-target="#slide-2">
             <div class="hsContainer">
                 <div class="hsContent"
-                     data-center-bottom="opacity: 0"
-                     data-center-top="opacity: 1"
-                     data--100-bottom="opacity: 1;"
-                     data-anchor-target="#slide-2">
+                     data--50-bottom="opacity: 0;"
+                     data--200-bottom="opacity: 0;"
+                     data-center="opacity: 1"
+                     data-200-top="opacity: 1"
+                     data-anchor-target="#slide-2 h2">
                     <div class="container-fluid" id="aboutText">
                         <h2>A little about myself</h2>
                         <p>
@@ -155,14 +156,14 @@
             <div class="hsContainer">
                 <div class="hsContent"
                      data--50-bottom="opacity: 0;"
-                     data--200-bottom="opacity: 1;"
+                     data--200-bottom="opacity: 0;"
                      data-center="opacity: 1"
                      data-200-top="opacity: 1"
                      data-anchor-target="#slide-3 h2">
                     <h2>PROJECT PORTFOLIO</h2>
                     <div class="container" id="tourpackages-carousel">
                         <div class="row">
-                            <div class="col-xs-18 col-sm-6 col-md-3">
+                            <div class="col-xs-12 col-sm-6 col-md-3">
                                 <div class="thumbnail">
                                     <img src="images/rsz_1pawze2.png" />
                                     <div class="caption" id="pawze">
@@ -171,7 +172,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xs-18 col-sm-6 col-md-3">
+                            <div class="col-xs-12 col-sm-6 col-md-3">
                                 <div class="thumbnail">
                                     <img src="images/rsz_property-manager.png" alt="">
                                     <div class="caption" id="property">
@@ -180,7 +181,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xs-18 col-sm-6 col-md-3">
+                            <div class="col-xs-12 col-sm-6 col-md-3">
                                 <div class="thumbnail">
                                     <img src="images/rsz_food_ninja (1).png" alt="">
                                     <div class="caption" id="ninja">
@@ -189,7 +190,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xs-18 col-sm-6 col-md-3">
+                            <div class="col-xs-12 col-sm-6 col-md-3">
                                 <div class="thumbnail">
                                     <img src="images/rsz_1memory.png" alt="">
                                     <div class="caption" id="memory">
@@ -204,13 +205,14 @@
             </div>
         </div>
     </section>
-    <!--ARTWORK-->
+    <!--SKILLS-->
     <section id="slide-4" class="homeSlide">
         <div class="bcg"
              data-center="background-position: 50% 0px;"
              data-top-bottom="background-position: 50% -100px;"
              data-bottom-top="background-position: 50% 100px;"
              data-anchor-target="#slide-4">
+            <div class="hsContainer">
             <div class="hsContent"
                  data--50-bottom="opacity: 0;"
                  data--200-bottom="opacity: 1;"
@@ -218,7 +220,69 @@
                  data-200-top="opacity: 1"
                  data-anchor-target="#slide-4 h2">
                 <h2>SKILLS</h2>
-
+                <div class="container" id="skills">
+                    <div class="skillbar clearfix " data-percent="81%">
+                      <div class="skillbar-title" style="background: #d35400;"><span>HTML5</span></div>
+                      <div class="skillbar-bar" style="background: #e67e22;"></div>
+                      <div class="skill-bar-percent">81%</div>
+                    </div>
+                    <div class="skillbar clearfix " data-percent="75%">
+                      <div class="skillbar-title" style="background: #2980b9;"><span>CSS3</span></div>
+                      <div class="skillbar-bar" style="background: #3498db;"></div>
+                      <div class="skill-bar-percent">75%</div>
+                    </div>
+                      <div class="skillbar clearfix " data-percent="64%">
+                      <div class="skillbar-title" style="background: #D6BA32;"><span>JavaScript</span></div>
+                      <div class="skillbar-bar" style="background: #F1DA4E;"></div>
+                      <div class="skill-bar-percent">64%</div>
+                    </div>
+                    <div class="skillbar clearfix " data-percent="52%">
+                      <div class="skillbar-title" style="background: #172C45;"><span>jQuery</span></div>
+                      <div class="skillbar-bar" style="background: #193556;"></div>
+                      <div class="skill-bar-percent">52%</div>
+                    </div>
+                    <div class="skillbar clearfix " data-percent="45%">
+                      <div class="skillbar-title" style="background: #333333;"><span>SQL</span></div>
+                      <div class="skillbar-bar" style="background: #525252;"></div>
+                      <div class="skill-bar-percent">45%</div>
+                    </div>
+                    <div class="skillbar clearfix " data-percent="68%">
+                      <div class="skillbar-title" style="background: #32007D;"><span>C#</span></div>
+                      <div class="skillbar-bar" style="background: #A177DB;"></div>
+                      <div class="skill-bar-percent">68%</div>
+                    </div>
+                    <div class="skillbar clearfix " data-percent="54%">
+                      <div class="skillbar-title" style="background: #B52E31;"><span>AngularJS</span></div>
+                      <div class="skillbar-bar" style="background: #E23237;"></div>
+                      <div class="skill-bar-percent">54%</div>
+                    </div>
+                    <div class="skillbar clearfix " data-percent="60%">
+                      <div class="skillbar-title" style="background: #0C78C4;"><span>ASP.NET</span></div>
+                      <div class="skillbar-bar" style="background: #4BBAF5;"></div>
+                      <div class="skill-bar-percent">60%</div>
+                    </div>
+                    <div class="skillbar clearfix " data-percent="58%">
+                      <div class="skillbar-title" style="background: #27ae60;"><span>SEO</span></div>
+                      <div class="skillbar-bar" style="background: #2ecc71;"></div>
+                      <div class="skill-bar-percent">58%</div>
+                    </div>
+                    <div class="skillbar clearfix " data-percent="76%">
+                      <div class="skillbar-title" style="background: #367AB6;"><span>Wordpress</span></div>
+                      <div class="skillbar-bar" style="background: #62BEDA;"></div>
+                      <div class="skill-bar-percent">76%</div>
+                    </div>
+                    <div class="skillbar clearfix " data-percent="70%">
+                      <div class="skillbar-title" style="background: #08004E;"><span>Photoshop</span></div>
+                      <div class="skillbar-bar" style="background: #A0CBFE;"></div>
+                      <div class="skill-bar-percent">70%</div>
+                    </div>
+                    <div class="skillbar clearfix " data-percent="76%">
+                      <div class="skillbar-title" style="background: #CC6633;"><span>Illustrator</span></div>
+                      <div class="skillbar-bar" style="background: #E17422;"></div>
+                      <div class="skill-bar-percent">76%</div>
+                    </div>
+                </div>
+            </div>
             </div>
         </div>
     </section>
@@ -239,7 +303,8 @@
     </footer>
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="js/main.js"></script>
     <script src="bower_components/bower-skrollr/skrollr.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/skrollr.js"></script>
 </body>
 </html>
