nav bar links updated

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="hsContainer">
                 <div class="hsContent"
                      data-bottom="bottom: 250px; opacity: 1"
-                     data-top="bottom: 1800px; opacity: 0"
+                     data-top="bottom: 1800px; opacity: 1"
                      data-anchor-target="#slide-1 img">
                     <div class="container-fluid">
                         <div class="row">
@@ -125,7 +125,7 @@
                      data-center="opacity: 1"
                      data-200-top="opacity: 1"
                      data-anchor-target="#slide-2 h2">
-                    <div class="container-fluid" id="aboutText">
+                    <div class="container" id="aboutText">
                         <h2>A little about myself</h2>
                         <p>
                             Retro readymade four loko mumblecore, put a bird on it health goth disrupt
