still tinkering with responsive

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="css/medium.css" media="only screen and (min-width: 600px)" rel="stylesheet" />
     <link href="css/large.css" media="only screen and (min-width: 768px)" rel="stylesheet" />
     <link href="css/style.css" media="only screen and (min-width: 1200px)" rel="stylesheet" />
+    <link href="css/responsive.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -168,7 +169,7 @@
                                     <img src="images/rsz_1pawze2.png" />
                                     <div class="caption" id="pawze">
                                         <h4>PAWZE</h4>
-                                        <p>Full stack application. Pawze makes use of SOLID design pattern / SQL database / Web API / REST APIs / OAuth with roles / User dashboard / AngularJS & JQuery with animations / Stripe subscription & payment API / MP4 video background.</p>
+                                        <p>Full stack application. SOLID design pattern / SQL database / Web API / REST APIs / OAuth with roles / User dash / AngularJS and JQuery with animations / Stripe subscription and payment API / MP4 video background.</p>
                                     </div>
                                 </div>
                             </div>
@@ -177,7 +178,7 @@
                                     <img src="images/rsz_property-manager.png" alt="">
                                     <div class="caption" id="property">
                                         <h4>PROPERTY MANAGER</h4>
-                                        <p>Full stack application. Property Manager features SQL database with search and filtering / Web API / REST APIs / AngularJS / OAuth with roles for login & registration and user dashboard / Users can set favorite properties and drill down into greater detail.</p>
+                                        <p>Full stack application. SQL database / Web API / REST APIs / AngularJS / OAuth with roles for login and registration / user dashboard / User favorite properties with drill down.</p>
                                     </div>
                                 </div>
                             </div>
@@ -186,7 +187,7 @@
                                     <img src="images/rsz_food_ninja (1).png" alt="">
                                     <div class="caption" id="ninja">
                                         <h4>FOOD NINJA</h4>
-                                        <p>Full stack application. The Food Ninja application uses a complex ERD and Relationship tables / SQL database / Web API / REST APIs / OAuth with roles for login and registration / User dashboard / AngularJS.</p>
+                                        <p>Full stack application. Complex ERD and Relationship tables / SQL database / Web API / REST APIs / OAuth with roles for login and registration / User dashboard / AngularJS.</p>
                                     </div>
                                 </div>
                             </div>
@@ -195,7 +196,7 @@
                                     <img src="images/rsz_1memory.png" alt="">
                                     <div class="caption" id="memory">
                                         <h4>MEMORY GAME</h4>
-                                        <p>Front end application. The Memory Game web application is a fun project written in HTML / CSS / Javascript and uses the JQuery component library Sizzle / The app tracks clicks for score and users can reset the current game at any point.</p>
+                                        <p>Front end application. Fun project written in HTML / CSS / Javascript and uses the JQuery component library Sizzle with animaion / Score tracking and reset functionality.</p>
                                     </div>
                                 </div>
                             </div>
@@ -251,20 +252,20 @@
                       <div class="skillbar-bar" style="background: #A177DB;"></div>
                       <div class="skill-bar-percent">68%</div>
                     </div>
-                    <div class="skillbar clearfix " data-percent="54%">
+                    <div class="skillbar clearfix " data-percent="60%">
                       <div class="skillbar-title" style="background: #B52E31;"><span>AngularJS</span></div>
                       <div class="skillbar-bar" style="background: #E23237;"></div>
-                      <div class="skill-bar-percent">54%</div>
-                    </div>
-                    <div class="skillbar clearfix " data-percent="60%">
-                      <div class="skillbar-title" style="background: #0C78C4;"><span>ASP.NET</span></div>
-                      <div class="skillbar-bar" style="background: #4BBAF5;"></div>
                       <div class="skill-bar-percent">60%</div>
                     </div>
-                    <div class="skillbar clearfix " data-percent="58%">
+                    <div class="skillbar clearfix " data-percent="68%">
+                      <div class="skillbar-title" style="background: #0C78C4;"><span>ASP.NET</span></div>
+                      <div class="skillbar-bar" style="background: #4BBAF5;"></div>
+                      <div class="skill-bar-percent">68%</div>
+                    </div>
+                    <div class="skillbar clearfix " data-percent="56%">
                       <div class="skillbar-title" style="background: #27ae60;"><span>SEO</span></div>
                       <div class="skillbar-bar" style="background: #2ecc71;"></div>
-                      <div class="skill-bar-percent">58%</div>
+                      <div class="skill-bar-percent">56%</div>
                     </div>
                     <div class="skillbar clearfix " data-percent="76%">
                       <div class="skillbar-title" style="background: #367AB6;"><span>Wordpress</span></div>
